--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   get: ^4.6.5
   sqflite: ^2.2.7
   floor: ^1.4.1
+  shared_preferences: ^2.1.0
+  get_it: ^7.3.0
+  fluttertoast: ^8.2.1
+  lottie: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -66,9 +70,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/icons/
-    - assets/images/
-  #   - images/a_dot_ham.jpeg
+     - assets/images/
+   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
